Replace gulp with webpack

--- a/src/styles/modules/_base.scss
+++ b/src/styles/modules/_base.scss
@@ -1,7 +1,7 @@
 $root-color: #222;
 $root-font-family: Raleway, sans-serif;
 
-@import "../../../node_modules/sanitize.css/sanitize.scss";
+@import "~sanitize.css/lib/sanitize.scss";
 
 :root {
     height: 100%;
